[package]
name = "scoreboard_db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "24.0.0", optional = true }
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }

[features]
database = ["dep:mysql"]