[package]
name = "scoreboard_db"
version = "0.2.1"
edition = "2021"
authors = ["Philip Barlow"]
description = "Library that provides a database connection for the scoreboard for an in house code challenge server"
license = "MIT"
repository = "https://github.com/bitbrain-za/scoreboard-db-rs"
homepage = "https://github.com/bitbrain-za/scoreboard-db-rs"
readme = "README.md"

[dependencies]
mysql = { version = "24.0.0", optional = true }
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }

[features]
database = ["dep:mysql"]